--- a/public/index.html
+++ b/public/index.html
@@ -136,39 +136,90 @@
       <!-- Dashboard -->
       <section id="view-dashboard" class="view">
         <div class="page-header">
-          <h1>Dashboard</h1>
-          <p>Resumen del sistema</p>
+          <h1><i class="fas fa-tachometer-alt"></i> Dashboard</h1>
+          <p id="dashboard-fecha">Sorteos del día</p>
         </div>
         
+        <!-- Stats del día -->
         <div class="stats-grid">
           <div class="stat-card">
-            <div class="stat-icon blue"><i class="fas fa-file-upload"></i></div>
-            <div class="stat-value" id="stat-archivos">0</div>
-            <div class="stat-label">Archivos Hoy</div>
+            <div class="stat-icon blue"><i class="fas fa-calendar-day"></i></div>
+            <div class="stat-value" id="stat-total-sorteos">0</div>
+            <div class="stat-label">Sorteos Programados</div>
           </div>
           <div class="stat-card">
-            <div class="stat-icon green"><i class="fas fa-list-ol"></i></div>
-            <div class="stat-value" id="stat-extractos">0</div>
-            <div class="stat-label">Extractos Cargados</div>
+            <div class="stat-icon orange"><i class="fas fa-clock"></i></div>
+            <div class="stat-value" id="stat-pendientes">0</div>
+            <div class="stat-label">Pendientes</div>
           </div>
           <div class="stat-card">
-            <div class="stat-icon orange"><i class="fas fa-clipboard-check"></i></div>
-            <div class="stat-value" id="stat-previo">0</div>
+            <div class="stat-icon green"><i class="fas fa-clipboard-check"></i></div>
+            <div class="stat-value" id="stat-control-previo">0</div>
             <div class="stat-label">Control Previo</div>
           </div>
           <div class="stat-card">
-            <div class="stat-icon purple"><i class="fas fa-calculator"></i></div>
-            <div class="stat-value" id="stat-posterior">0</div>
-            <div class="stat-label">Control Posterior</div>
+            <div class="stat-icon purple"><i class="fas fa-check-double"></i></div>
+            <div class="stat-value" id="stat-escrutados">0</div>
+            <div class="stat-label">Escrutados</div>
+          </div>
+        </div>
+
+        <!-- Totales -->
+        <div class="stats-grid" style="margin-top: 1rem;">
+          <div class="stat-card" style="flex: 2;">
+            <div class="stat-icon green"><i class="fas fa-dollar-sign"></i></div>
+            <div class="stat-value" id="stat-recaudacion-total">$0</div>
+            <div class="stat-label">Recaudación Total (Control Previo)</div>
+          </div>
+          <div class="stat-card" style="flex: 2;">
+            <div class="stat-icon red"><i class="fas fa-trophy"></i></div>
+            <div class="stat-value" id="stat-premios-total">$0</div>
+            <div class="stat-label">Premios Pagados (Escrutinio)</div>
           </div>
         </div>
         
+        <!-- Tabla de Sorteos del Día -->
         <div class="card">
-          <div class="card-header">
-            <h3>Actividad Reciente</h3>
+          <div class="card-header" style="display: flex; justify-content: space-between; align-items: center;">
+            <h3><i class="fas fa-list"></i> Sorteos del Día</h3>
+            <input type="date" id="dashboard-fecha-input" class="form-control" style="width: auto;">
           </div>
           <div class="card-body">
-            <p class="text-muted">Sistema listo para operar. Seleccione una opción del menú.</p>
+            <div class="table-responsive">
+              <table class="table" id="tabla-sorteos-dia">
+                <thead>
+                  <tr>
+                    <th>Sorteo</th>
+                    <th>Juego</th>
+                    <th>Hora</th>
+                    <th>Modalidad</th>
+                    <th>Estado</th>
+                    <th>Recaudación</th>
+                    <th>Premios</th>
+                    <th>Acciones</th>
+                  </tr>
+                </thead>
+                <tbody id="tbody-sorteos-dia">
+                  <tr>
+                    <td colspan="8" class="text-center text-muted">
+                      <i class="fas fa-spinner fa-spin"></i> Cargando sorteos...
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- Sin programación -->
+        <div class="card hidden" id="dashboard-sin-programacion">
+          <div class="card-body text-center" style="padding: 3rem;">
+            <i class="fas fa-calendar-times" style="font-size: 4rem; color: var(--text-muted); margin-bottom: 1rem;"></i>
+            <h3>No hay sorteos programados</h3>
+            <p class="text-muted">Cargue la programación del mes desde el menú <strong>Programación</strong> para ver los sorteos del día.</p>
+            <button class="btn btn-primary" onclick="navigateTo('programacion')">
+              <i class="fas fa-upload"></i> Cargar Programación
+            </button>
           </div>
         </div>
       </section>
@@ -1545,6 +1596,6 @@
   <div id="toast-container"></div>
 
   <script src="js/api.js?v=20260121b"></script>
-  <script src="js/app.js?v=20260122c"></script>
+  <script src="js/app.js?v=20260122d"></script>
 </body>
 </html>
