fix(ui): Solo una opción Loto en selector y texto reducido
- Eliminada opción duplicada de Loto
- Texto de Loto reducido a '6/45 + PLUS' para mantener formato compacto

--- a/public/index.html
+++ b/public/index.html
@@ -1054,7 +1054,7 @@
                   <input type="radio" name="cpst-juego" value="Loto" style="width: 18px; height: 18px;">
                   <div>
                     <strong style="font-size: 0.95rem;">🍀 Loto</strong>
-                    <p class="text-muted" style="margin: 0; font-size: 0.7rem;">6/45 | 4 modalidades</p>
+                    <p class="text-muted" style="margin: 0; font-size: 0.7rem;">6/45 + PLUS</p>
                   </div>
                 </label>
               </div>
