--- a/public/index.html
+++ b/public/index.html
@@ -2853,6 +2853,75 @@
               </div>
             </div>
           </div>
+
+          <!-- Reporte de Ventas Turfito -->
+          <div class="card" id="hipicas-ventas-card">
+            <div class="card-header" style="display: flex; justify-content: space-between; align-items: center; background: linear-gradient(135deg, #ff9800 0%, #ff5722 100%);">
+              <h3 style="color: white;"><i class="fas fa-chart-bar"></i> Reporte de Ventas Turfito</h3>
+              <button class="btn btn-sm" style="background: white; color: #ff5722;" onclick="exportarVentasTurfitoExcel()">
+                <i class="fas fa-file-excel"></i> Exportar Excel
+              </button>
+            </div>
+            <div class="card-body">
+              <div class="form-row" style="gap: 1rem; margin-bottom: 1rem; align-items: flex-end;">
+                <div class="form-group" style="flex: 1;">
+                  <label>Fecha Desde</label>
+                  <input type="date" id="hipicas-ventas-desde" class="form-control">
+                </div>
+                <div class="form-group" style="flex: 1;">
+                  <label>Fecha Hasta</label>
+                  <input type="date" id="hipicas-ventas-hasta" class="form-control">
+                </div>
+                <div class="form-group">
+                  <button class="btn btn-primary" onclick="buscarVentasTurfito()">
+                    <i class="fas fa-search"></i> Buscar
+                  </button>
+                </div>
+              </div>
+              
+              <!-- Totales -->
+              <div id="hipicas-ventas-totales" style="display: none; margin-bottom: 1rem;">
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem;">
+                  <div class="stat-card" style="background: rgba(255, 152, 0, 0.1); border-left: 3px solid #ff9800; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Recaudación Bruta</div>
+                    <div id="hipicas-ventas-total-bruta" style="font-size: 1.1rem; font-weight: 600; color: #ff9800;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(244, 67, 54, 0.1); border-left: 3px solid #f44336; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Cancelaciones</div>
+                    <div id="hipicas-ventas-total-cancel" style="font-size: 1.1rem; font-weight: 600; color: #f44336;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(156, 39, 176, 0.1); border-left: 3px solid #9c27b0; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Devoluciones</div>
+                    <div id="hipicas-ventas-total-devol" style="font-size: 1.1rem; font-weight: 600; color: #9c27b0;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(76, 175, 80, 0.1); border-left: 3px solid #4caf50; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Total Neto</div>
+                    <div id="hipicas-ventas-total-neto" style="font-size: 1.1rem; font-weight: 600; color: #4caf50;">$0</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                <table class="table" id="hipicas-tabla-ventas">
+                  <thead style="position: sticky; top: 0; background: var(--bg-card);">
+                    <tr>
+                      <th>Fecha</th>
+                      <th>Hipódromo</th>
+                      <th>Reunión</th>
+                      <th style="text-align: right;">Recaudación Bruta</th>
+                      <th style="text-align: right;">Cancelaciones</th>
+                      <th style="text-align: right;">Devoluciones</th>
+                      <th style="text-align: right;">Total Neto</th>
+                      <th style="text-align: center;">Agencias</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr><td colspan="8" class="text-center text-muted" style="padding: 2rem;">Seleccione un rango de fechas y haga click en Buscar</td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Sección Telekino (futuro) -->
