--- a/public/index.html
+++ b/public/index.html
@@ -2916,6 +2916,56 @@
                   </tbody>
                 </table>
               </div>
+
+              <!-- Facturación UTE -->
+              <div id="hipicas-facturacion-ute" style="display: none; margin-top: 2rem; border-top: 2px solid var(--border-color); padding-top: 1.5rem;">
+                <h4 style="margin-bottom: 1rem; color: #2196f3;">
+                  <i class="fas fa-file-invoice-dollar"></i> Facturación UTE - Capital Federal
+                </h4>
+                
+                <!-- Constantes y Totales -->
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 0.75rem; margin-bottom: 1.5rem;">
+                  <div class="stat-card" style="background: rgba(33, 150, 243, 0.1); border-left: 3px solid #2196f3; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Recaudación Total</div>
+                    <div id="ute-recaudacion-total" style="font-size: 1.1rem; font-weight: 600; color: #2196f3;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(156, 39, 176, 0.1); border-left: 3px solid #9c27b0; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Tope Estipulado</div>
+                    <div id="ute-tope" style="font-size: 1.1rem; font-weight: 600; color: #9c27b0;">$75.000.000</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(255, 152, 0, 0.1); border-left: 3px solid #ff9800; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Excedente (25%)</div>
+                    <div id="ute-excedente" style="font-size: 1.1rem; font-weight: 600; color: #ff9800;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(76, 175, 80, 0.1); border-left: 3px solid #4caf50; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Total a Facturar</div>
+                    <div id="ute-total-facturar" style="font-size: 1.1rem; font-weight: 600; color: #4caf50;">$0</div>
+                  </div>
+                </div>
+
+                <!-- Tabla Facturación por Hipódromo -->
+                <div class="table-responsive">
+                  <table class="table" id="hipicas-tabla-ute">
+                    <thead>
+                      <tr style="background: rgba(33, 150, 243, 0.1);">
+                        <th>Hipódromo</th>
+                        <th style="text-align: right;">Recaudación</th>
+                        <th style="text-align: center;">Particip. %</th>
+                        <th style="text-align: right;">Dentro Tope</th>
+                        <th style="text-align: right;">Sobre Tope</th>
+                        <th style="text-align: right;">Monto Facturar</th>
+                        <th style="text-align: right;">Descuento 20.2%</th>
+                        <th style="text-align: right;">IVA 21%</th>
+                        <th style="text-align: right; color: #4caf50; font-weight: bold;">TOTAL</th>
+                      </tr>
+                    </thead>
+                    <tbody id="ute-tabla-body">
+                    </tbody>
+                    <tfoot id="ute-tabla-footer" style="font-weight: bold; background: rgba(33, 150, 243, 0.15);">
+                    </tfoot>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -3021,9 +3071,9 @@
   <!-- Toast Container -->
   <div id="toast-container"></div>
 
-  <script src="js/api.js?v=20260205b"></script>
-  <script src="js/ocr-extractos.js?v=20260205b"></script>
-  <script src="js/app.js?v=20260205b"></script>
+  <script src="js/api.js?v=20260205c"></script>
+  <script src="js/ocr-extractos.js?v=20260205c"></script>
+  <script src="js/app.js?v=20260205c"></script>
 </body>
 
 </html>
