feat: agregar lineas SAP para copiar en Facturacion UTE - completo/reducido por hipodromo

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control de Loterías</title>
-  <link rel="stylesheet" href="css/styles.css?v=20260205d">
+  <link rel="stylesheet" href="css/styles.css?v=20260205e">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -2965,6 +2965,8 @@
                     </tfoot>
                   </table>
                 </div>
+                <!-- Contenedor para líneas SAP -->
+                <div id="ute-lineas-sap-container"></div>
               </div>
             </div>
           </div>
@@ -3071,9 +3073,9 @@
   <!-- Toast Container -->
   <div id="toast-container"></div>
 
-  <script src="js/api.js?v=20260205d"></script>
-  <script src="js/ocr-extractos.js?v=20260205d"></script>
-  <script src="js/app.js?v=20260205d"></script>
+  <script src="js/api.js?v=20260205e"></script>
+  <script src="js/ocr-extractos.js?v=20260205e"></script>
+  <script src="js/app.js?v=20260205e"></script>
 </body>
 
 </html>
