--- a/public/index.html
+++ b/public/index.html
@@ -3073,9 +3073,9 @@
   <!-- Toast Container -->
   <div id="toast-container"></div>
 
-  <script src="js/api.js?v=20260205g"></script>
-  <script src="js/ocr-extractos.js?v=20260205g"></script>
-  <script src="js/app.js?v=20260205g"></script>
+  <script src="js/api.js?v=20260205h"></script>
+  <script src="js/ocr-extractos.js?v=20260205h"></script>
+  <script src="js/app.js?v=20260205h"></script>
 </body>
 
 </html>
