--- a/public/index.html
+++ b/public/index.html
@@ -2875,50 +2875,8 @@
                 </div>
               </div>
               
-              <!-- Totales -->
-              <div id="hipicas-ventas-totales" style="display: none; margin-bottom: 1rem;">
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem;">
-                  <div class="stat-card" style="background: rgba(255, 152, 0, 0.1); border-left: 3px solid #ff9800; padding: 0.75rem;">
-                    <div style="font-size: 0.75rem; color: var(--text-muted);">Recaudación Bruta</div>
-                    <div id="hipicas-ventas-total-bruta" style="font-size: 1.1rem; font-weight: 600; color: #ff9800;">$0</div>
-                  </div>
-                  <div class="stat-card" style="background: rgba(244, 67, 54, 0.1); border-left: 3px solid #f44336; padding: 0.75rem;">
-                    <div style="font-size: 0.75rem; color: var(--text-muted);">Cancelaciones</div>
-                    <div id="hipicas-ventas-total-cancel" style="font-size: 1.1rem; font-weight: 600; color: #f44336;">$0</div>
-                  </div>
-                  <div class="stat-card" style="background: rgba(156, 39, 176, 0.1); border-left: 3px solid #9c27b0; padding: 0.75rem;">
-                    <div style="font-size: 0.75rem; color: var(--text-muted);">Devoluciones</div>
-                    <div id="hipicas-ventas-total-devol" style="font-size: 1.1rem; font-weight: 600; color: #9c27b0;">$0</div>
-                  </div>
-                  <div class="stat-card" style="background: rgba(76, 175, 80, 0.1); border-left: 3px solid #4caf50; padding: 0.75rem;">
-                    <div style="font-size: 0.75rem; color: var(--text-muted);">Total Neto</div>
-                    <div id="hipicas-ventas-total-neto" style="font-size: 1.1rem; font-weight: 600; color: #4caf50;">$0</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-                <table class="table" id="hipicas-tabla-ventas">
-                  <thead style="position: sticky; top: 0; background: var(--bg-card);">
-                    <tr>
-                      <th>Fecha</th>
-                      <th>Hipódromo</th>
-                      <th>Reunión</th>
-                      <th style="text-align: right;">Recaudación Bruta</th>
-                      <th style="text-align: right;">Cancelaciones</th>
-                      <th style="text-align: right;">Devoluciones</th>
-                      <th style="text-align: right;">Total Neto</th>
-                      <th style="text-align: center;">Agencias</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr><td colspan="8" class="text-center text-muted" style="padding: 2rem;">Seleccione un rango de fechas y haga click en Buscar</td></tr>
-                  </tbody>
-                </table>
-              </div>
-
-              <!-- Facturación UTE -->
-              <div id="hipicas-facturacion-ute" style="display: none; margin-top: 2rem; border-top: 2px solid var(--border-color); padding-top: 1.5rem;">
+              <!-- Facturación UTE (ARRIBA) -->
+              <div id="hipicas-facturacion-ute" style="display: none; margin-bottom: 2rem; border-bottom: 2px solid var(--border-color); padding-bottom: 1.5rem;">
                 <h4 style="margin-bottom: 1rem; color: #2196f3;">
                   <i class="fas fa-file-invoice-dollar"></i> Facturación UTE - Capital Federal
                 </h4>
@@ -2967,6 +2925,53 @@
                 </div>
                 <!-- Contenedor para líneas SAP -->
                 <div id="ute-lineas-sap-container"></div>
+              </div>
+
+              <!-- Listado de Recaudación (ABAJO) -->
+              <h4 style="margin-bottom: 1rem; color: #ff9800;">
+                <i class="fas fa-list-alt"></i> Detalle de Recaudación por Reunión
+              </h4>
+              
+              <!-- Totales -->
+              <div id="hipicas-ventas-totales" style="display: none; margin-bottom: 1rem;">
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem;">
+                  <div class="stat-card" style="background: rgba(255, 152, 0, 0.1); border-left: 3px solid #ff9800; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Recaudación Bruta</div>
+                    <div id="hipicas-ventas-total-bruta" style="font-size: 1.1rem; font-weight: 600; color: #ff9800;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(244, 67, 54, 0.1); border-left: 3px solid #f44336; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Cancelaciones</div>
+                    <div id="hipicas-ventas-total-cancel" style="font-size: 1.1rem; font-weight: 600; color: #f44336;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(156, 39, 176, 0.1); border-left: 3px solid #9c27b0; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Devoluciones</div>
+                    <div id="hipicas-ventas-total-devol" style="font-size: 1.1rem; font-weight: 600; color: #9c27b0;">$0</div>
+                  </div>
+                  <div class="stat-card" style="background: rgba(76, 175, 80, 0.1); border-left: 3px solid #4caf50; padding: 0.75rem;">
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">Total Neto</div>
+                    <div id="hipicas-ventas-total-neto" style="font-size: 1.1rem; font-weight: 600; color: #4caf50;">$0</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                <table class="table" id="hipicas-tabla-ventas">
+                  <thead style="position: sticky; top: 0; background: var(--bg-card);">
+                    <tr>
+                      <th>Fecha</th>
+                      <th>Hipódromo</th>
+                      <th>Reunión</th>
+                      <th style="text-align: right;">Recaudación Bruta</th>
+                      <th style="text-align: right;">Cancelaciones</th>
+                      <th style="text-align: right;">Devoluciones</th>
+                      <th style="text-align: right;">Total Neto</th>
+                      <th style="text-align: center;">Agencias</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr><td colspan="8" class="text-center text-muted" style="padding: 2rem;">Seleccione un rango de fechas y haga click en Buscar</td></tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
@@ -3073,9 +3078,9 @@
   <!-- Toast Container -->
   <div id="toast-container"></div>
 
-  <script src="js/api.js?v=20260205h"></script>
-  <script src="js/ocr-extractos.js?v=20260205h"></script>
-  <script src="js/app.js?v=20260205h"></script>
+  <script src="js/api.js?v=20260205i"></script>
+  <script src="js/ocr-extractos.js?v=20260205i"></script>
+  <script src="js/app.js?v=20260205i"></script>
 </body>
 
 </html>
