fix: mostrar premio en vez de importe en tickets ganadores Brinco y Quini6

--- a/public/index.html
+++ b/public/index.html
@@ -1599,6 +1599,17 @@
             </div>
           </div>
 
+          <!-- Premio Extra -->
+          <div style="margin-top: 0.75rem; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 8px; border-left: 4px solid #ec4899;">
+            <label style="margin-bottom: 0.5rem; display: block;">
+              <strong><span class="badge" style="background: #ec4899;">Premio Extra</span></strong> Pool de números (0-45) - Ingresá todos los números del pool separados por coma, espacio o guión
+            </label>
+            <div class="form-group" style="margin: 0; max-width: 600px;">
+              <input type="text" id="cpst-quini6-pe-pool" class="form-control" placeholder="Ej: 01, 05, 12, 15, 18, 22, 25, 28, 32, 35, 38, 40, 42, 44, 45, 03, 08, 11">
+              <small class="text-muted">El pool normalmente tiene ~18 números. Ganan quienes tengan sus 6 números jugados dentro del pool.</small>
+            </div>
+          </div>
+
           <div id="cpst-quini6-preview"></div>
 
           <div style="margin-top: 1.5rem; display: flex; gap: 1rem;">
