fix(quini6): corregir calculo Premio Extra - excluir ganadores 6 aciertos y eliminar duplicados del pool
- Premio Extra ahora excluye apuestas que ganaron 6 aciertos en Trad 1a, Trad 2a o Revancha (Art. 30 reglamento)
- Pool Premio Extra elimina numeros duplicados (18 -> 15 unicos)
- Agregado script analizar_premio_extra.js para debugging
- Agregados campos editables de premios para Quini6 y Brinco en frontend
- Fix actas: corregido calculo de instancias y apuestas simples

--- a/public/index.html
+++ b/public/index.html
@@ -1584,6 +1584,27 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-quini6-trad1-5" min="0" max="45" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-quini6-trad1-6" min="0" max="45" class="form-control text-center" placeholder="00"></div>
             </div>
+            <!-- Premios del extracto - Tradicional 1ª -->
+            <div id="cpst-quini6-trad1-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(59, 130, 246, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">6 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad1-gan6" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 6 aciertos">
+                  <input type="number" id="cpst-quini6-trad1-premio6" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 6 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">5 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad1-gan5" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 5 aciertos">
+                  <input type="number" id="cpst-quini6-trad1-premio5" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 5 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">4 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad1-gan4" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 4 aciertos">
+                  <input type="number" id="cpst-quini6-trad1-premio4" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 4 aciertos">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Tradicional Segunda vuelta -->
@@ -1598,6 +1619,27 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">4°</label><input type="number" id="cpst-quini6-trad2-4" min="0" max="45" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-quini6-trad2-5" min="0" max="45" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-quini6-trad2-6" min="0" max="45" class="form-control text-center" placeholder="00"></div>
+            </div>
+            <!-- Premios del extracto - Tradicional 2ª -->
+            <div id="cpst-quini6-trad2-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(16, 185, 129, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">6 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad2-gan6" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 6 aciertos">
+                  <input type="number" id="cpst-quini6-trad2-premio6" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 6 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">5 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad2-gan5" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 5 aciertos">
+                  <input type="number" id="cpst-quini6-trad2-premio5" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 5 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">4 Aciertos</label>
+                  <input type="number" id="cpst-quini6-trad2-gan4" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 4 aciertos">
+                  <input type="number" id="cpst-quini6-trad2-premio4" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 4 aciertos">
+                </div>
+              </div>
             </div>
           </div>
 
@@ -1614,6 +1656,20 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-quini6-rev-5" min="0" max="45" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-quini6-rev-6" min="0" max="45" class="form-control text-center" placeholder="00"></div>
             </div>
+            <!-- Premios del extracto - Revancha -->
+            <div id="cpst-quini6-rev-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(245, 158, 11, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; max-width: 300px;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Ganadores 6 Aciertos</label>
+                  <input type="number" id="cpst-quini6-rev-gan6" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 6 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Premio Unitario</label>
+                  <input type="number" id="cpst-quini6-rev-premio6" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem;" title="Premio unitario 6 aciertos">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Siempre Sale -->
@@ -1629,6 +1685,24 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-quini6-ss-5" min="0" max="45" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-quini6-ss-6" min="0" max="45" class="form-control text-center" placeholder="00"></div>
             </div>
+            <!-- Premios del extracto - Siempre Sale -->
+            <div id="cpst-quini6-ss-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(147, 51, 234, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem; max-width: 400px;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Aciertos Req.</label>
+                  <input type="number" id="cpst-quini6-ss-aciertos" min="1" max="6" class="form-control text-center" placeholder="6" value="6" style="font-size: 0.8rem; padding: 0.25rem;" title="Aciertos requeridos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Ganadores</label>
+                  <input type="number" id="cpst-quini6-ss-gan" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Cantidad de ganadores">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Premio Unit.</label>
+                  <input type="number" id="cpst-quini6-ss-premio" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem;" title="Premio unitario">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Premio Extra -->
@@ -1639,6 +1713,20 @@
             <div class="form-group" style="margin: 0; max-width: 600px;">
               <input type="text" id="cpst-quini6-pe-pool" class="form-control" placeholder="Ej: 01, 05, 12, 15, 18, 22, 25, 28, 32, 35, 38, 40, 42, 44, 45, 03, 08, 11">
               <small class="text-muted">El pool normalmente tiene ~18 números. Ganan quienes tengan sus 6 números jugados dentro del pool.</small>
+            </div>
+            <!-- Premios del extracto - Premio Extra -->
+            <div id="cpst-quini6-pe-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(236, 72, 153, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; max-width: 300px;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Ganadores</label>
+                  <input type="number" id="cpst-quini6-pe-gan" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Cantidad de ganadores">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Premio Unit.</label>
+                  <input type="number" id="cpst-quini6-pe-premio" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem;" title="Premio unitario">
+                </div>
+              </div>
             </div>
           </div>
 
@@ -1708,6 +1796,27 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-brinco-trad-5" min="0" max="40" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-brinco-trad-6" min="0" max="40" class="form-control text-center" placeholder="00"></div>
             </div>
+            <!-- Premios del extracto - BRINCO Tradicional -->
+            <div id="cpst-brinco-trad-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(59, 130, 246, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">6 Aciertos</label>
+                  <input type="number" id="cpst-brinco-trad-gan6" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 6 aciertos">
+                  <input type="number" id="cpst-brinco-trad-premio6" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 6 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">5 Aciertos</label>
+                  <input type="number" id="cpst-brinco-trad-gan5" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 5 aciertos">
+                  <input type="number" id="cpst-brinco-trad-premio5" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 5 aciertos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">4 Aciertos</label>
+                  <input type="number" id="cpst-brinco-trad-gan4" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Ganadores 4 aciertos">
+                  <input type="number" id="cpst-brinco-trad-premio4" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem; margin-top: 0.25rem;" title="Premio unitario 4 aciertos">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Brinco Junior -->
@@ -1723,6 +1832,24 @@
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">4°</label><input type="number" id="cpst-brinco-junior-4" min="0" max="40" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">5°</label><input type="number" id="cpst-brinco-junior-5" min="0" max="40" class="form-control text-center" placeholder="00"></div>
               <div class="form-group" style="margin: 0;"><label style="font-size: 0.75rem; text-align: center; display: block;">6°</label><input type="number" id="cpst-brinco-junior-6" min="0" max="40" class="form-control text-center" placeholder="00"></div>
+            </div>
+            <!-- Premios del extracto - BRINCO Junior -->
+            <div id="cpst-brinco-junior-premios" style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(16, 185, 129, 0.05); border-radius: 6px; display: none;">
+              <small style="color: var(--text-muted); display: block; margin-bottom: 0.5rem;"><i class="fas fa-trophy"></i> Premios del Extracto (editable)</small>
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem; max-width: 400px;">
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Aciertos Req.</label>
+                  <input type="number" id="cpst-brinco-junior-aciertos" min="1" max="6" class="form-control text-center" placeholder="5" value="5" style="font-size: 0.8rem; padding: 0.25rem;" title="Aciertos requeridos">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Ganadores</label>
+                  <input type="number" id="cpst-brinco-junior-gan" min="0" class="form-control text-center" placeholder="Gan" style="font-size: 0.8rem; padding: 0.25rem;" title="Cantidad de ganadores">
+                </div>
+                <div style="text-align: center;">
+                  <label style="font-size: 0.7rem;">Premio Unit.</label>
+                  <input type="number" id="cpst-brinco-junior-premio" min="0" step="0.01" class="form-control text-center" placeholder="Premio" style="font-size: 0.8rem; padding: 0.25rem;" title="Premio unitario">
+                </div>
+              </div>
             </div>
           </div>
 
