fix: estandarizar formato ctaCte a numerico sin guion (5100011)
- Hipicas: extrae agencia sin verificador, genera ctaCte como prov+agencia
- Quini6/Brinco control-previo: ctaCte sin guion
- Escrutinios (quiniela, poceada, brinco, quini6): formato sin guion
- escrutinio.helper.js: detecta ambos formatos de entrada, genera sin guion
- Historial: agrega columna Fecha Control (created_at)
- Modalidad solo visible para Quiniela en historial

--- a/public/index.html
+++ b/public/index.html
@@ -2965,13 +2965,14 @@
                 <table class="table table-hover mb-0" id="table-historial-escrutinio">
                   <thead>
                     <tr>
-                      <th>Fecha</th>
+                      <th>Fecha Sorteo</th>
                       <th>Sorteo</th>
                       <th>Modalidad</th>
                       <th>Juego</th>
                       <th>Total Ganadores</th>
                       <th>Total Premios</th>
                       <th>Usuario</th>
+                      <th>Fecha Control</th>
                       <th>Acciones</th>
                     </tr>
                   </thead>
