--- a/public/index.html
+++ b/public/index.html
@@ -997,6 +997,17 @@
               <div class="form-group" style="flex: 0 0 auto; min-width: 180px;">
                 <label class="radio-card"
                   style="display: flex; align-items: center; gap: 0.75rem; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: 8px; cursor: pointer; transition: all 0.2s;"
+                  onclick="seleccionarJuegoPosterior('Quiniela Ya')">
+                  <input type="radio" name="cpst-juego" value="Quiniela Ya" style="width: 18px; height: 18px;">
+                  <div>
+                    <strong style="font-size: 0.95rem;">⚡ Quiniela Ya</strong>
+                    <p class="text-muted" style="margin: 0; font-size: 0.7rem;">Sin extracto</p>
+                  </div>
+                </label>
+              </div>
+              <div class="form-group" style="flex: 0 0 auto; min-width: 180px;">
+                <label class="radio-card"
+                  style="display: flex; align-items: center; gap: 0.75rem; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: 8px; cursor: pointer; transition: all 0.2s;"
                   onclick="seleccionarJuegoPosterior('Poceada')">
                   <input type="radio" name="cpst-juego" value="Poceada" style="width: 18px; height: 18px;">
                   <div>
@@ -2692,6 +2703,10 @@
                     <span class="checkmark game-quiniela">🎰 QUINIELA</span>
                   </label>
                   <label class="game-checkbox">
+                    <input type="checkbox" id="dash-game-quinielaya" onchange="toggleDashboardGame('quinielaya')">
+                    <span class="checkmark game-quinielaya">⚡ QUINIELA YA</span>
+                  </label>
+                  <label class="game-checkbox">
                     <input type="checkbox" id="dash-game-poceada" onchange="toggleDashboardGame('poceada')">
                     <span class="checkmark game-poceada">🎯 POCEADA</span>
                   </label>
@@ -2859,6 +2874,7 @@
                   <select class="form-control" id="cp-juego">
                     <option value="">Todos</option>
                     <option value="quiniela">Quiniela</option>
+                    <option value="quinielaya">Quiniela Ya</option>
                     <option value="poceada">Poceada</option>
                     <option value="tombolina">Tombolina</option>
                     <option value="loto">Loto</option>
@@ -2933,6 +2949,7 @@
                   <select class="form-control" id="esc-juego">
                     <option value="">Todos</option>
                     <option value="quiniela">Quiniela</option>
+                    <option value="quinielaya">Quiniela Ya</option>
                     <option value="poceada">Poceada</option>
                     <option value="tombolina">Tombolina</option>
                     <option value="loto">Loto</option>
@@ -3456,8 +3473,8 @@
   <script src="js/config.local.js" onerror="console.warn('config.local.js no encontrado - usando config por defecto')"></script>
   <script src="js/config.js?v=20260206g"></script>
   <script src="js/api.js?v=20260206a"></script>
-  <script src="js/ocr-extractos.js?v=20260206g"></script>
-  <script src="js/app.js?v=20260206i"></script>
+  <script src="js/ocr-extractos.js?v=20260219a"></script>
+  <script src="js/app.js?v=20260219a"></script>
 </body>
 
 </html>
