fix(ocr): soporte robusto groq/openai e indicador de proveedor activo

--- a/public/index.html
+++ b/public/index.html
@@ -331,6 +331,10 @@
                 </button>
               </div>
 
+              <div id="ocr-provider-indicator" class="text-center mt-3">
+                <span class="badge bg-secondary">Proveedor OCR activo: Sin configurar</span>
+              </div>
+
               <!-- Vista Previa de Imagen capturada o procesada -->
               <div id="ocr-preview" class="hidden mt-4 text-center">
                 <div class="card p-2" style="background: var(--bg-input);">
