feat(ocr): agregar tab API Key OCR en panel Control Posterior

--- a/public/index.html
+++ b/public/index.html
@@ -286,6 +286,7 @@
           <div class="tabs">
             <button class="tab active" data-tab="cargar">Cargar Extracto</button>
             <button class="tab" data-tab="ver">Ver Extractos</button>
+            <button class="tab" data-tab="config-ocr"><i class="fas fa-key"></i> API Key OCR</button>
           </div>
 
           <div class="tab-content" id="tab-cargar">
